Change to Dropbox (to remove the Bintray rate limit) (#343)
Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -89,9 +89,9 @@ jobs:
         twine upload wheelhouse/tensorflow_io_nightly-*.whl
         for entry in wheelhouse/tensorflow_io-*.whl ; do
           sha256sum $entry
-          STATUS=$(curl --header "X-Bintray-Override: 1" --header "X-Bintray-Publish: 1" --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/${TRAVIS_BUILD_NUMBER}/$entry)
-          if [[ "$STATUS" -ne 201 ]] ; then
-            echo "Upload to Bintray: $STATUS"
+          STATUS=$(curl --write-out %{http_code} --silent --output /dev/null -X POST https://content.dropboxapi.com/2/files/upload --header "Authorization: Bearer ${DROPBOX_ACCESS_TOKEN}" --header "Dropbox-API-Arg: {\"path\": \"/${TRAVIS_BUILD_NUMBER}/$entry\",\"mode\": \"add\",\"autorename\": true,\"mute\": false,\"strict_conflict\": false}" --header "Content-Type: application/octet-stream" --data-binary @$entry)
+          if [[ "$STATUS" -ne 200 ]] ; then
+            echo "Upload to Dropbox: $STATUS"
             exit 1
           fi
         done
@@ -107,9 +107,9 @@ jobs:
         twine upload wheelhouse/tensorflow_io_nightly-*.whl
         for entry in wheelhouse/tensorflow_io-*.whl ; do
           sha256sum $entry
-          STATUS=$(curl --header "X-Bintray-Override: 1" --header "X-Bintray-Publish: 1" --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/${TRAVIS_BUILD_NUMBER}/$entry)
-          if [[ "$STATUS" -ne 201 ]] ; then
-            echo "Upload to Bintray: $STATUS"
+          STATUS=$(curl --write-out %{http_code} --silent --output /dev/null -X POST https://content.dropboxapi.com/2/files/upload --header "Authorization: Bearer ${DROPBOX_ACCESS_TOKEN}" --header "Dropbox-API-Arg: {\"path\": \"/${TRAVIS_BUILD_NUMBER}/$entry\",\"mode\": \"add\",\"autorename\": true,\"mute\": false,\"strict_conflict\": false}" --header "Content-Type: application/octet-stream" --data-binary @$entry)
+          if [[ "$STATUS" -ne 200 ]] ; then
+            echo "Upload to Dropbox: $STATUS"
             exit 1
           fi
         done
@@ -127,9 +127,9 @@ jobs:
         twine upload wheelhouse/tensorflow_io_nightly-*.whl
         for entry in wheelhouse/tensorflow_io-*.whl ; do
           shasum -a 256 $entry
-          STATUS=$(curl --header "X-Bintray-Override: 1" --header "X-Bintray-Publish: 1" --write-out %{http_code} --silent --output /dev/null -T $entry -utensorflow-io-nightly:$BINTRAY_API https://api.bintray.com/content/tensorflow-io/tensorflow-io-nightly/tensorflow-io-release/${TRAVIS_BUILD_NUMBER}/${TRAVIS_BUILD_NUMBER}/$entry)
-          if [[ "$STATUS" -ne 201 ]] ; then
-            echo "Upload to Bintray: $STATUS"
+          STATUS=$(curl --write-out %{http_code} --silent --output /dev/null -X POST https://content.dropboxapi.com/2/files/upload --header "Authorization: Bearer ${DROPBOX_ACCESS_TOKEN}" --header "Dropbox-API-Arg: {\"path\": \"/${TRAVIS_BUILD_NUMBER}/$entry\",\"mode\": \"add\",\"autorename\": true,\"mute\": false,\"strict_conflict\": false}" --header "Content-Type: application/octet-stream" --data-binary @$entry)
+          if [[ "$STATUS" -ne 200 ]] ; then
+            echo "Upload to Dropbox: $STATUS"
             exit 1
           fi
         done
