Centralising bazel copts similar to tf main repo (#341)
- Not passing -pthread opts on Darwin which is a large number of log
messages in travis build

--- a/tensorflow_io/avro/BUILD
+++ b/tensorflow_io/avro/BUILD
@@ -2,17 +2,18 @@ licenses(["notice"])  # Apache 2.0
 
 package(default_visibility = ["//visibility:public"])
 
+load(
+    "//tensorflow_io:tensorflow_io.bzl",
+    "tf_io_copts",
+)
+
 cc_library(
     name = "avro_ops",
     srcs = [
         "kernels/avro_input.cc",
         "ops/avro_ops.cc",
     ],
-    copts = [
-        "-pthread",
-        "-std=c++11",
-        "-DNDEBUG",
-    ],
+    copts = tf_io_copts(),
     includes = [
         ".",
     ],
