--- a/tensorflow_io/bigtable/BUILD
+++ b/tensorflow_io/bigtable/BUILD
@@ -1,6 +1,11 @@
 # Cloud Bigtable client for TensorFlow
 licenses(["notice"])  # Apache 2.0
 
+load(
+    "//tensorflow_io:tensorflow_io.bzl",
+    "tf_io_copts",
+)
+
 cc_binary(
     name = "python/ops/_bigtable.so",
     srcs = [
@@ -15,11 +20,7 @@ cc_binary(
         "kernels/bigtable_scan_dataset_op.cc",
         "ops/bigtable_ops.cc",
     ],
-    copts = [
-        "-pthread",
-        "-std=c++11",
-        "-DNDEBUG",
-    ],
+    copts = tf_io_copts(),
     linkshared = 1,
     deps = [
         ":bigtable_lib_cc",
@@ -35,11 +36,7 @@ cc_library(
         "kernels/test_kernels/bigtable_test_client_op.cc",
         "ops/bigtable_test_ops.cc",
     ],
-    copts = [
-        "-pthread",
-        "-std=c++11",
-        "-DNDEBUG",
-    ],
+    copts = tf_io_copts(),
     linkstatic = True,
     deps = [
         ":bigtable_lib_cc",
@@ -72,11 +69,7 @@ cc_library(
     hdrs = [
         "kernels/test_kernels/bigtable_test_client.h",
     ],
-    copts = [
-        "-pthread",
-        "-std=c++11",
-        "-DNDEBUG",
-    ],
+    copts = tf_io_copts(),
     linkstatic = True,
     deps = [
         "@com_github_googleapis_google_cloud_cpp//google/cloud/bigtable:bigtable_client",
@@ -91,11 +84,7 @@ cc_library(
     name = "bigtable_lib_cc",
     srcs = ["kernels/bigtable_lib.cc"],
     hdrs = ["kernels/bigtable_lib.h"],
-    copts = [
-        "-pthread",
-        "-std=c++11",
-        "-DNDEBUG",
-    ],
+    copts = tf_io_copts(),
     linkstatic = True,
     deps = [
         "@com_github_googleapis_google_cloud_cpp//google/cloud/bigtable:bigtable_client",
