--- a/tensorflow_io/hadoop/BUILD
+++ b/tensorflow_io/hadoop/BUILD
@@ -2,17 +2,18 @@ licenses(["notice"])  # Apache 2.0
 
 package(default_visibility = ["//visibility:public"])
 
+load(
+    "//tensorflow_io:tensorflow_io.bzl",
+    "tf_io_copts",
+)
+
 cc_binary(
     name = "python/ops/_hadoop_ops.so",
     srcs = [
         "kernels/hadoop_dataset_ops.cc",
         "ops/dataset_ops.cc",
     ],
-    copts = [
-        "-pthread",
-        "-std=c++11",
-        "-DNDEBUG",
-    ],
+    copts = tf_io_copts(),
     linkshared = 1,
     deps = [
         "@local_config_tf//:libtensorflow_framework",
