--- a/tensorflow_io/image/BUILD
+++ b/tensorflow_io/image/BUILD
@@ -2,6 +2,11 @@ licenses(["notice"])  # Apache 2.0
 
 package(default_visibility = ["//visibility:public"])
 
+load(
+    "//tensorflow_io:tensorflow_io.bzl",
+    "tf_io_copts",
+)
+
 cc_binary(
     name = "python/ops/_image_ops.so",
     srcs = [
@@ -12,11 +17,7 @@ cc_binary(
         "kernels/webp_dataset_ops.cc",
         "ops/dataset_ops.cc",
     ],
-    copts = [
-        "-pthread",
-        "-std=c++11",
-        "-DNDEBUG",
-    ],
+    copts = tf_io_copts(),
     includes = [
         ".",
     ],
