--- a/tensorflow_io/kafka/BUILD
+++ b/tensorflow_io/kafka/BUILD
@@ -2,6 +2,11 @@ licenses(["notice"])  # Apache 2.0
 
 package(default_visibility = ["//visibility:public"])
 
+load(
+    "//tensorflow_io:tensorflow_io.bzl",
+    "tf_io_copts",
+)
+
 cc_binary(
     name = "python/ops/_kafka_ops.so",
     srcs = [
@@ -10,11 +15,7 @@ cc_binary(
         "ops/dataset_ops.cc",
         "ops/kafka_ops.cc",
     ],
-    copts = [
-        "-pthread",
-        "-std=c++11",
-        "-DNDEBUG",
-    ],
+    copts = tf_io_copts(),
     linkshared = 1,
     deps = [
         "//tensorflow_io/core:sequence_ops",
