--- a/tensorflow_io/text/BUILD
+++ b/tensorflow_io/text/BUILD
@@ -2,6 +2,11 @@ licenses(["notice"])  # Apache 2.0
 
 package(default_visibility = ["//visibility:public"])
 
+load(
+    "//tensorflow_io:tensorflow_io.bzl",
+    "tf_io_copts",
+)
+
 cc_library(
     name = "text_ops",
     srcs = [
@@ -9,11 +14,7 @@ cc_library(
         "kernels/text_sequence.cc",
         "ops/text_ops.cc",
     ],
-    copts = [
-        "-pthread",
-        "-std=c++11",
-        "-DNDEBUG",
-    ],
+    copts = tf_io_copts(),
     includes = [
         ".",
     ],
