--- a/tensorflow_io/hdf5/BUILD
+++ b/tensorflow_io/hdf5/BUILD
@@ -2,17 +2,18 @@ licenses(["notice"])  # Apache 2.0
 
 package(default_visibility = ["//visibility:public"])
 
+load(
+    "//tensorflow_io:tensorflow_io.bzl",
+    "tf_io_copts",
+)
+
 cc_library(
     name = "hdf5_ops",
     srcs = [
         "kernels/hdf5_input.cc",
         "ops/hdf5_ops.cc",
     ],
-    copts = [
-        "-pthread",
-        "-std=c++11",
-        "-DNDEBUG",
-    ],
+    copts = tf_io_copts(),
     includes = [
         ".",
     ],
