--- a/tensorflow_io/pubsub/BUILD
+++ b/tensorflow_io/pubsub/BUILD
@@ -3,6 +3,10 @@ licenses(["notice"])  # Apache 2.0
 package(default_visibility = ["//visibility:public"])
 
 load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
+load(
+    "//tensorflow_io:tensorflow_io.bzl",
+    "tf_io_copts",
+)
 
 cc_binary(
     name = "python/ops/_pubsub_ops.so",
@@ -10,11 +14,7 @@ cc_binary(
         "kernels/pubsub_dataset_ops.cc",
         "ops/dataset_ops.cc",
     ],
-    copts = [
-        "-pthread",
-        "-std=c++11",
-        "-DNDEBUG",
-    ],
+    copts = tf_io_copts(),
     linkshared = 1,
     deps = [
         "@com_github_grpc_grpc//:grpc++",
