--- a/tensorflow_io/gcs/BUILD
+++ b/tensorflow_io/gcs/BUILD
@@ -15,6 +15,7 @@ cc_binary(
     ],
     linkshared = 1,
     deps = [
+        "@curl",
         "@jsoncpp_git//:jsoncpp",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
