Add save_csv op (#351)
* Add save method for TextDataset

This is an experimental implementation of the `save` (write)
method for TextDataset in order to allow saving
the content of Dataset into files.

TextDataset itself is straightforward so it may not be that useful.
However, it setup an example for saving to other future format (e.g., Parquet/Arrow/etc).

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add tests for save_text

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add save_csv support

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/text/BUILD
+++ b/tensorflow_io/text/BUILD
@@ -10,6 +10,7 @@ load(
 cc_library(
     name = "text_ops",
     srcs = [
+        "kernels/csv_output.cc",
         "kernels/text_input.cc",
         "kernels/text_output.cc",
         "kernels/text_sequence.cc",
@@ -22,6 +23,7 @@ cc_library(
     linkstatic = True,
     deps = [
         "//tensorflow_io/core:dataset_ops",
+        "//tensorflow_io/core:output_ops",
         "//tensorflow_io/core:sequence_ops",
     ],
 )
