--- a/.travis.yml
+++ b/.travis.yml
@@ -119,7 +119,7 @@ jobs:
     os: osx
     osx_image: xcode9
     script:
-    - sudo -H bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" --nightly ${TRAVIS_BUILD_NUMBER} python python3.4.6 python3.5.3 python3.6.2
+    - sudo -H bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" --nightly ${TRAVIS_BUILD_NUMBER} python python3.5.3 python3.6.2
     - sudo -H bash -x -e .travis/wheel.test.sh
     after_success:
     - |
