Migrating contrib.cloud to tensorflow_io and contrib.BigTable fixes/enhancement (#166)
* [WIP] Part 1: migrating contrib.cloud to tensorflow_io

* Add original contrib.cloud README.md

* [WIP] Part 1: add BUILD file to build C++ ops

* [WIP] Part 1: get more build scaffolding for building the .so and cloud_py python library

* [WIP] Part 1: updating the python API to load the .so and access the C++ Ops

* Buildifier the BUILD files

* Fixes pylint warnings

* Add __init__.py to fix bigtable package not including the _bigtable*.so and python api

* Add py_library=bigtable build rule

* Add __init__.py to python/../ops/..

* Add end of file empty line to fix LINT

* "-D_GLIBCXX_USE_CXX11_ABI=0", could be removed as it is processed by ./configure.sh automatically now.

--- a/tensorflow_io/bigtable/BUILD
+++ b/tensorflow_io/bigtable/BUILD
@@ -1,9 +1,27 @@
 # Cloud Bigtable client for TensorFlow
 licenses(["notice"])  # Apache 2.0
 
+package(
+    default_visibility = ["//tensorflow_io/cloud:__subpackages__"],
+)
+
 load(
     "//tensorflow_io:tensorflow_io.bzl",
     "tf_io_copts",
+)
+
+py_library(
+    name = "bigtable",
+    srcs = [
+        "__init__.py",
+        "python/__init__.py",
+        "python/ops/__init__.py",
+        "python/ops/bigtable_api.py",
+    ],
+    data = [
+        ":python/ops/_bigtable.so",
+    ],
+    srcs_version = "PY2AND3",
 )
 
 cc_binary(
@@ -52,6 +70,11 @@ cc_binary(
     name = "bigtable_test_client_test",
     srcs = [
         "kernels/test_kernels/bigtable_test_client_test.cc",
+    ],
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-DNDEBUG",
     ],
     deps = [
         ":bigtable_lib_cc",
