--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -111,6 +111,7 @@ cc_binary(
         "//tensorflow_io/avro:avro_ops",
         "//tensorflow_io/azure:azfs_ops",
         "//tensorflow_io/cifar:cifar_ops",
+        "//tensorflow_io/dicom:dicom_ops",
         "//tensorflow_io/hdf5:hdf5_ops",
         "//tensorflow_io/ignite:ignite_ops",
         "//tensorflow_io/lmdb:lmdb_ops",
