--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ install:
     bash -x -e tests/test_ignite/start_ignite.sh
     bash -x -e tests/test_kafka/kafka_test.sh start kafka
     bash -x -e tests/test_azure/start_azure.sh
+    bash -x -e tests/test_dicom/dicom_samples.sh download
+    bash -x -e tests/test_dicom/dicom_samples.sh extract
     # Kinesis, Pubsub, and Prometheus are not supported on macOS yet
     #bash -x -e tests/test_kinesis/kinesis_test.sh start kinesis
     #bash -x -e tests/test_pubsub/pubsub_test.sh start pubsub
