--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ jobs:
     os: osx
     osx_image: xcode9
     script:
-    - sudo -H bash -x -e .travis/python.release.sh tensorflow==2.0.0b1 --preview ${TRAVIS_BUILD_NUMBER} python
+    - sudo -H BAZEL_CACHE=${BAZEL_CACHE} bash -x -e .travis/python.release.sh tensorflow==2.0.0b1 --preview ${TRAVIS_BUILD_NUMBER} python
     - sudo -H bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e after-sucess-tf20.sh
 
@@ -97,7 +97,7 @@ jobs:
     os: osx
     osx_image: xcode9
     script:
-    - sudo -H bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" --nightly ${TRAVIS_BUILD_NUMBER} python
+    - sudo -H BAZEL_CACHE=${BAZEL_CACHE} bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" --nightly ${TRAVIS_BUILD_NUMBER} python
     - sudo -H bash -x -e .travis/wheel.test.sh python
     after_success: bash -x -e .travis/after-success.sh
     
@@ -106,7 +106,7 @@ jobs:
     os: osx
     osx_image: xcode9
     script:
-    - sudo -H bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" --nightly ${TRAVIS_BUILD_NUMBER} python3.5.3
+    - sudo -H BAZEL_CACHE=${BAZEL_CACHE} bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" --nightly ${TRAVIS_BUILD_NUMBER} python3.5.3
     - sudo -H bash -x -e .travis/wheel.test.sh python3.5.3
     after_success: bash -x -e .travis/after-success.sh
 
@@ -115,7 +115,7 @@ jobs:
     os: osx
     osx_image: xcode9
     script:
-    - sudo -H bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" --nightly ${TRAVIS_BUILD_NUMBER} python3.6.2
+    - sudo -H BAZEL_CACHE=${BAZEL_CACHE} bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" --nightly ${TRAVIS_BUILD_NUMBER} python3.6.2
     - sudo -H bash -x -e .travis/wheel.test.sh python3.6.2
     after_success: bash -x -e .travis/after-success.sh
 
