[GSoC-Phase2] Add JSON Support (#337)
* Add json_ops

* Add boilerplate code for json parser in cpp

* use BufferInputStream instead of JSONInputStream

* Add implementation of ReadRecord on the top of jsoncpp

* Add JSONInputStream.

* Remove the columns from JSONInputStream.

* Fix a typo

* Add and update the bazel BUILD files.

* JSON cpp implementation can be compiled successfully.

* Remove unused Python implementation of JSONDataset.

* Fix lints.

* Fix lints.

* Fix lints.

* Fix bugs and improve the tests.

* Fix lints

* Add a test to use JSONDataset with Keras.

* Fix a lint

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -114,6 +114,7 @@ cc_binary(
         "//tensorflow_io/dicom:dicom_ops",
         "//tensorflow_io/hdf5:hdf5_ops",
         "//tensorflow_io/ignite:ignite_ops",
+        "//tensorflow_io/json:json_ops",
         "//tensorflow_io/lmdb:lmdb_ops",
         "//tensorflow_io/mnist:mnist_ops",
         "//tensorflow_io/prometheus:prometheus_ops",
