Add rebatch method for Dataset (#393)
* Add rebatch method for Dataset

This PR adds rebatch method for Dataset where
```
dataset.apply(rebatch(n)) = dataset.unbatch().batch(n)
```

The motivation for rebatch is that there are situations we read the data in
big batches but then we want to adjust the batch size to fit differnet
scenarios.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add additional tests, also add batch_mode = "keep", "drop", "pad" mode

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Rename RebatchDataset to AdjustBatchDataset

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add additional processing in case shape is unknown

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Address review comments

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix failed tests

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -58,6 +58,22 @@ cc_library(
 )
 
 cc_library(
+    name = "core_ops",
+    srcs = [
+        "kernels/rebatch_dataset_op.cc",
+        "ops/core_ops.cc",
+    ],
+    copts = tf_io_copts(),
+    includes = [
+        ".",
+    ],
+    linkstatic = True,
+    deps = [
+        ":dataset_ops",
+    ],
+)
+
+cc_library(
     name = "ffmpeg_3.4",
     srcs = [
         "kernels/ffmpeg_reader.cc",
@@ -107,6 +123,7 @@ cc_binary(
     copts = tf_io_copts(),
     linkshared = 1,
     deps = [
+        ":core_ops",
         "//tensorflow_io/audio:audio_ops",
         "//tensorflow_io/avro:avro_ops",
         "//tensorflow_io/azure:azfs_ops",
