--- a/tensorflow_io/pubsub/BUILD
+++ b/tensorflow_io/pubsub/BUILD
@@ -4,7 +4,7 @@ package(default_visibility = ["//visibility:public"])
 
 load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
 load(
-    "//tensorflow_io:tensorflow_io.bzl",
+    "//third_party/tf:tensorflow_io.bzl",
     "tf_io_copts",
 )
 
