Add read_wav and list_wav_info support (#406)
* Add read_wav and list_wav_info support

This PR adds read_wav and list_wav_info support
so that it is possible to read wav file into a tensor.
Since WAV file is splittable, read_wav could take a
start and count parameter so that only a slice
of the wav file is read.

This is also part of the effort to rework on Dataset
to move to primitive ops.

See See 382 and 366 for related discussions.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Rename start, count to start, stop

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/audio/BUILD
+++ b/tensorflow_io/audio/BUILD
@@ -10,7 +10,7 @@ load(
 cc_library(
     name = "audio_ops",
     srcs = [
-        "kernels/audio_input.cc",
+        "kernels/audio_kernels.cc",
         "ops/audio_ops.cc",
     ],
     copts = tf_io_copts(),
