--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -28,6 +28,7 @@ cc_library(
     name = "dataset_ops",
     srcs = [
         "kernels/dataset_ops.h",
+        "kernels/stream.h",
     ],
     copts = tf_io_copts(),
     includes = [
