Add read_text to read lines from splittable text file (#397)
* Add read_text to read lines from splittable text file

This PR is part of the effort to rework on Dataset with
large files reading into Tensors first to speed up performance.
See 382 and 366 for related discussions.

Summary:
1) read_text is able to read a text file with in the range of [offset, offset+length]
2) that gives us the Splittable text file where we could read file in chunks (similar to hadoop)
3) the plan is to read a text file in big chunks and then wire up with tf.data.Dataset
4) read_text is a primitive C++ op so it could be used in tf.data, and it could be used in other places.

Note once PR 393 is merged I will convert TextDataset to use this ops
(and remove the native C++ implementation of TextDataset)

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Use read_text to implement TextDataset

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix python 3 failure

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/text/BUILD
+++ b/tensorflow_io/text/BUILD
@@ -11,7 +11,7 @@ cc_library(
     name = "text_ops",
     srcs = [
         "kernels/csv_output.cc",
-        "kernels/text_input.cc",
+        "kernels/text_kernels.cc",
         "kernels/text_output.cc",
         "kernels/text_re2.cc",
         "kernels/text_sequence.cc",
