--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -135,6 +135,7 @@ cc_binary(
         "//tensorflow_io/json:json_ops",
         "//tensorflow_io/lmdb:lmdb_ops",
         "//tensorflow_io/mnist:mnist_ops",
+        "//tensorflow_io/parquet:parquet_ops",
         "//tensorflow_io/prometheus:prometheus_ops",
         "//tensorflow_io/text:text_ops",
         "@libarchive",
