--- a/tensorflow_io/parquet/BUILD
+++ b/tensorflow_io/parquet/BUILD
@@ -7,18 +7,16 @@ load(
     "tf_io_copts",
 )
 
-cc_binary(
-    name = "python/ops/_parquet_ops.so",
+cc_library(
+    name = "parquet_ops",
     srcs = [
-        "kernels/parquet_input.cc",
+        "kernels/parquet_kernels.cc",
         "ops/parquet_ops.cc",
     ],
     copts = tf_io_copts(),
-    linkshared = 1,
+    linkstatic = True,
     deps = [
         "//tensorflow_io/core:dataset_ops",
         "@arrow",
-        "@local_config_tf//:libtensorflow_framework",
-        "@local_config_tf//:tf_header_lib",
     ],
 )
