Add list_feather_columns function in eager mode (#404)
* Add list_feather_columns function in eager mode

This PR adds list_feather_columns function in eager mode,
so that it is possible to get the column name and spec
information for feather format.

This PR implements an `::arrow::io::RandomAccessFile` interface
so it is possible to read files through scheme file system,
e.g., s3, gcs, azfs, etc.

The `::arrow::io::RandomAccessFile` is the same as in Parquet PR 384
so they could be combined.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Use flatbuffer to read feather metadata, to avoid reading whole file through feather api.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Keep unsupported datatype so that it is possible to process in python, based on review comment

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Combine .so files into one place to reduce whl package size

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Combine ArrowRandomAccessFile and ParquetRandomAccessFile as they are the same

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -125,6 +125,7 @@ cc_binary(
     linkshared = 1,
     deps = [
         ":core_ops",
+        "//tensorflow_io/arrow:arrow_ops",
         "//tensorflow_io/audio:audio_ops",
         "//tensorflow_io/avro:avro_ops",
         "//tensorflow_io/azure:azfs_ops",
