Move Kafka into libtensorflow_io.so to reduce the number of shared ob… (#421)
* Move Kafka into libtensorflow_io.so to reduce the number of shared object libs

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Split Prometheus into a separate .so, as golang does not play well with static TLS

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/prometheus/BUILD
+++ b/tensorflow_io/prometheus/BUILD
@@ -14,12 +14,12 @@ cc_library(
         "ops/prometheus_ops.cc",
     ],
     copts = tf_io_copts(),
-    includes = [
-        ".",
-    ],
     linkstatic = True,
     deps = [
         "//tensorflow_io/core:dataset_ops",
-        "//tensorflow_io/prometheus/go:prometheus.cc",
+        "//tensorflow_io/core:prometheus_go_ops",
     ],
+    #data = [
+    #    "//tensorflow_io/core:prometheus_go.h",
+    #]
 )
